# CVLabs

LAB1/Task1-2/: Task1.depend  main.cpp
LAB1/Task3/: Task3.depend  Task3.layout  main.cpp
LAB1/Task4/: Task4.depend  main.cpp  main.cpp.save-failed
LAB1/Task5/: Task4.depend  main.cpp
LAB1/Task6/: Task1.cbp  Task1.depend  main.cpp
LAB2/Task1/: Task1.depend  main.cpp
LAB2/Task2/: Task2.cbp  Task2.depend  Task2.layout  filters.cpp  header.h  main.cpp
LAB2/Task3/: Task3.depend  main.cpp
LAB2/Task4/: Task4.depend  Task4.layout  main.cpp
LAB2/Task5/: Task5.depend  Task5.layout  main.cpp
LAB3/Task1/: CMakeLists.txt  main.cpp
LAB3/Task2/: CMakeLists.txt  main.cpp
LAB4/Task1/: CMakeLists.txt  main.cpp
LAB4/Task2/: CMakeLists.txt  main.cpp
LAB4/Task3/: CMakeLists.txt  main.cpp
LAB4/Task4/: CMakeLists.txt  main.cpp
LAB5/Task1/: CMakeLists.txt  main.cpp  thinning.cpp
LAB7/: Lab 7 - Image stitching.md
LAB7/ImageStitching/: CMakeLists.txt
LAB7/ImageStitching/code/: Panorama.cpp  Panorama.h  main.cpp  panoramic_utils.cpp
LAB7/ImageStitching/header/: Panorama.h
